fix(woki.controller): Unexpected `undefined` when the restaurant doesn't exist
